# topological_navigation_fuerte

./: .gitignore  README.md  cleanup.sh
graph_mapping/kidnapped_robot/: CMakeLists.txt  kidnapped.launch  mainpage.dox  manifest.xml  place_rec.launch
graph_mapping/kidnapped_robot/include/kidnapped_robot/: place_database.h
graph_mapping/kidnapped_robot/msg/: MatchRequest.msg  MatchResult.msg  SavePlace.msg
graph_mapping/kidnapped_robot/src/: db_test.cpp  kidnapped_node.cpp  place_database.cpp  place_recognition_node.cpp  point_head.cpp  test_place_db.cpp
graph_mapping/kidnapped_robot/srv/: RecognizePlace.srv
graph_mapping/kidnapped_robot/test/: test_place_rec.py
graph_mapping/laser_slam/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml
graph_mapping/laser_slam/cfg/: cloud_collector.cfg
graph_mapping/laser_slam/launch/: cloud_collector.launch  gmapping.launch  kinect_cloud.launch  laser_slam.launch  laser_slam_bag.launch  laser_slam_explore.launch  laser_slam_kr.launch  laser_slam_stage.launch  move_base_slam_5cm.launch  odom_slam.launch
graph_mapping/laser_slam/msg/: LocalizedScan.msg
graph_mapping/laser_slam/scripts/: test_slam_bag.py  test_slam_stage.py  top_graph.py
graph_mapping/laser_slam/src/: cloud_collector.cpp  convert_turtlebot_scan.py  global_map.cpp  laser_slam_node.cpp  odom_constraint_node.cpp  odom_constraints.cpp  odom_localizer.cpp  odom_slam_node.cpp  point_cloud_snapshotter.cpp  scan_intersection.cpp  scan_match_constraint_node.cpp  scan_match_constraints.cpp  scan_match_localization.cpp  scan_match_localizer.cpp  scan_matching.cpp  snapshotter_node.cpp  util.cpp
graph_mapping/laser_slam/srv/: RecentScanTime.srv
graph_mapping/laser_slam/test/: test_laser_slam.cpp
graph_mapping/pose_graph/: CMakeLists.txt  mainpage.dox  manifest.xml  rosdep.yaml
graph_mapping/pose_graph/scripts/: visualize_grid
graph_mapping/pose_graph/src/: constraint_graph.cpp  diff_publisher.cpp  diff_subscriber.cpp  graph_db_impl.h  graph_search.cpp  graph_search_impl.h  message_conversion.cpp  spa_2d_conversion.cpp  visualization.cpp
graph_mapping/pose_graph/test/: pose_graph_test.launch  test_pose_graph.cpp
topological_navigation/topological_roadmap/: CMakeLists.txt  manifest.xml
topological_navigation/topological_roadmap/launch/: move_base_topo.launch  move_base_topo_stage.launch  roadmap.launch  roadmap_stage.launch  topo_nav_stage.launch
topological_navigation/topological_roadmap/move_base_config/: costmap_common_params.yaml  footprint.yaml  global_costmap_params.yaml  move_base.xml
topological_navigation/topological_roadmap/rviz/: topo_nav.vcg
topological_navigation/topological_roadmap/src/: move_base_topo.cpp  roadmap.cpp  roadmap_builder.cpp  ros_conversion.cpp  shortest_paths.cpp
topological_navigation/topological_roadmap/test/: test_roadmap.cpp
vslam/bpcg/: CMakeLists.txt  manifest.xml
vslam/bpcg/src/: bpcg.cpp  test_bpcg.cpp
vslam/frame_common/: CMakeLists.txt  mainpage.dox  manifest.xml
vslam/frame_common/plain_cmake/: CMakeLists.txt
vslam/frame_common/src/: draw.cpp  frame.cpp  stereo.cpp  stereolib.c  test_frame.cpp
vslam/posest/: CMakeLists.txt  mainpage.dox  manifest.xml
vslam/posest/data/: bad1a-left.pnm  bad1a-right.pnm  bad1b-left.pnm  bad1b-right.pnm  bad1c-left.pnm  bad1c-right.pnm  cam-newcollege.txt  cam.txt  newcollege-1-L.pnm  newcollege-1-R.pnm  newcollege-2-L.pnm  newcollege-2-R.pnm
vslam/posest/plain_cmake/: CMakeLists.txt  README
vslam/posest/src/: esm.cpp  howardMatcher.cpp  pe.cpp  pe2d.cpp  pe3d.cpp  peh.cpp  planarSFM.cpp  pnp_ransac.cpp
vslam/posest/test/: ptest-bad1.sh  ptest-newcollege.sh  ptest-versailles.sh  run_esm  run_esm.cpp  run_posest  run_posest.cpp  run_sequence  run_sequence.cpp  run_simulated2d  run_simulated2d.cpp  simulated.cpp
vslam/sba/: CMakeLists.txt  Makefile-lib  library.txt  mainpage.dox  makelib.sh  manifest.xml  point_plane.vcg  rosdoc.yaml
vslam/sba/data/: sphere.graph
vslam/sba/msg/: CameraNode.msg  Frame.msg  Projection.msg  WorldPoint.msg
vslam/sba/srv/: MergeTracks.srv
vslam/sba/test/: choldemo.cpp  cholmod_timing  cholmod_timing.cpp  file_io_test.cpp  mono_test.cpp  plane_proj_test.cpp  point_plane2_vis  point_plane2_vis.cpp  point_plane_test.cpp  point_plane_vis.cpp  run_lourakis.sh  run_sba_bundler_file  run_sba_bundler_file.cpp  run_sba_graph_file  run_sba_graph_file.cpp  run_sba_sphere.cpp  run_sba_spiral.cpp  run_spa.cpp  run_spa2d  run_spa2d.cpp  run_spa_graph_file  run_spa_graph_file.cpp  sba_jac.cpp  sba_node_test  sba_node_test.cpp  sba_test.cpp  sbast_jac.cpp  sbast_test.cpp  single_plane_vis  single_plane_vis.cpp  spa2d_test.cpp  spiral_setup.cpp  spiral_test.cpp  vis-2d.cpp  vis-bundler  vis-bundler.cpp  vis-intel.cpp  vis-mono.cpp
vslam/vocabulary_tree/: CMakeLists.txt  holidays.weights  mainpage.dox  manifest.xml
vslam/vocabulary_tree/plain_cmake/: CMakeLists.txt
vslam/vocabulary_tree/src/: database.cpp  generic_tree.cpp  make_tree.cpp  make_tree_gaussian.cpp  train_weights.cpp
vslam/vocabulary_tree/test/: expected.txt  find_word.cpp  gaussian.txt  generate_gaussian.py  generate_hierarchical_gaussian.py  make_test_tree.cpp  plot_centers.py  test_database.cpp  test_distance.cpp  test_generic_tree.cpp  test_kmeans.cpp  test_kmeans_hier.cpp
vslam/vslam_system/: CMakeLists.txt  live_demo.launch  mainpage.dox  manifest.xml  ptcloud_vslam.launch  rosdoc.yaml  run_stereo.cpp  simple_vslam.vcg  stereo_vslam.launch  test_bag.launch  vo_node.launch  wg_vslam.vcg
vslam/vslam_system/cfg/: StereoVslamNode.cfg  StereoVslamNode.cfgc  detector_parameters.py
vslam/vslam_system/data/: cam-canon500d-20mm.txt  cam-newcollege.txt  cam-ps.txt
vslam/vslam_system/docs/: StereoVslamNodeConfig-usage.dox  StereoVslamNodeConfig.dox  StereoVslamNodeConfig.wikidoc
vslam/vslam_system/src/: place_recognizer.cpp  po_comparison.cpp  read_spa.cpp  run_mono.cpp  run_object.cpp  run_ps.cpp  run_ps_bag.cpp  run_stereo.cpp  vis-intel.cpp  vo.cpp  vo_ptcloud.cpp  vslam.cpp  vslam_mono.cpp  vslam_ptcloud.cpp
vslam/vslam_system/test/: run_simulated_mono.cpp
(+197 files in other folders)
